# rdflib-hdt

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  api.html  build-release.sh  genindex.html  hdtdocument.html  hdtstore.html  index.html  install.sh  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/codeql/: cpp.yaml  python.yaml
.github/workflows/: codeql-analysis.yml  ghpages.yml  linting.yml  pytest.yml  pythonpackage.yml  release.yml
_sources/: api.rst.txt  hdtdocument.rst.txt  hdtstore.rst.txt  index.rst.txt  installation.rst.txt
docs/: Makefile  make.bat
docs/source/: _config.yml  api.rst  conf.py  hdtdocument.rst  hdtstore.rst  index.rst  installation.rst
include/: docstrings.hpp  hdt_document.hpp  hdt_triple_iterator.hpp  join_iterator.hpp  join_iterator_bytes.hpp  pyhdt_types.hpp  triple_iterator.hpp  triple_iterator_bytes.hpp  tripleid_iterator.hpp
rdflib_hdt/: __init__.py  hdt_document.py  hdt_store.py  iterators.py  mapping.py  sparql_op.py  types.py
src/: hdt.cpp  hdt_document.cpp  hdt_triple_iterator.cpp  join_iterator.cpp  join_iterator_bytes.cpp  triple_iterator.cpp  triple_iterator_bytes.cpp  tripleid_iterator.cpp
tests/: hdt_document_test.py  hdt_iterators_test.py  hdt_store_test.py  join_iterator_test.py  wrappers_test.py
